SQOOP-1531: Sqoop2: Support getting connectors by Direction
(Erzsebet Szilagyi via Abraham Fine)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -142,6 +142,7 @@ show.prompt_link_cn_info = Using Connector @|bold {0}|@ with name @|bold {1}|@
 
 show.prompt_display_all_connectors = Display all connectors
 show.prompt_display_connector_name = Display the connector with name
+show.prompt_display_connectors_by_direction = Display all connectors that support the given direction
 show.connector_usage = Usage: show connector
 show.prompt_connectors_to_show = @|bold {0} connector(s) to show: |@
 show.prompt_connector_info = Connector with Name: {0} \n  \
