SQOOP-2941: Sqoop2: Provide option to re-create target directory if it exists in HDFS connector
(Boglarka Egyed via Abraham Fine)

--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -59,6 +59,11 @@ toJobConfig.appendMode.example = true
 toJobConfig.appendMode.help = If set to false, job will fail if output directory already exists. If set to true \
   then imported data will be stored to already existing and possibly non empty directory.
 
+toJobConfig.deleteOutputDirectory.label = Delete output directory
+toJobConfig.deleteOutputDirectory.example = true
+toJobConfig.deleteOutputDirectory.help = If set to false, job will fail if output directory already exists. If set to true \
+  then existing output directory will be deleted before job execution.
+
 toJobConfig.overrideNullValue.label = Override null value
 toJobConfig.overrideNullValue.example = true
 toJobConfig.overrideNullValue.help = If set to true, then the null value will be overridden with the value set in \
